# nitrodump

./: .coverage  .gitignore  README.md  pyproject.toml  test_client.py  test_notify.py  test_server.py  test_server_2.py
docs/: api.md  architecture.md  setup.md
extras/nitrodump.widget/: index.jsx
src/codeium_status.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nitrodump/: __init__.py  cli.py  client.py  formatter.py  menubar.py  menubar_manager.py  models.py  notifier.py  scheduler.py
src/nitrodump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_client.py  test_formatter.py  test_models.py  test_scheduler.py
