[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitrodump"
version = "0.1.0"
description = "Quick dump of Antigravity/Codeium account status and rate limits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
nitrodump = "nitrodump.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=nitrodump --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
